src/parse/snapshots/script_lang__parse__test__block__empty.snap
---
source: src/parse/test.rs
assertion_line: 251
expression: ast

---
Block {
    stmts: [],
    span: Span {
        start: 0,
        end: 0,
    },
}
