src/parse/snapshots/script_lang__parse__test__block__two_expressions.snap
---
source: src/parse/test.rs
assertion_line: 260
expression: ast

---
Block {
    stmts: [
        Expr(
            Literal(
                Number(
                    10.0,
                    Span {
                        start: 0,
                        end: 0,
                    },
                ),
            ),
        ),
        Expr(
            Literal(
                Number(
                    20.0,
                    Span {
                        start: 0,
                        end: 0,
                    },
                ),
            ),
        ),
    ],
    span: Span {
        start: 0,
        end: 0,
    },
}
